--- a/melior/Cargo.toml
+++ b/melior/Cargo.toml
@@ -14,7 +14,7 @@ ods-dialects = []
 [dependencies]
 dashmap = "5.5.3"
 melior-macro = { version = "0.11.1", path = "../macro" }
-mlir-sys = "0.2.2"
+mlir-sys = {path = "../../mlir-sys"}
 once_cell = "1"
 
 [dev-dependencies]
